--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Dompetku</string>
-    <string name="menu_laporan">laporan</string>
+    <string name="menu_laporan">Laporan</string>
     <string name="menu_transaksi">Transaksi</string>
-    <string name="menu_setting2">Setiing</string>
     <string name="menu_setting">Setting</string>
 </resources>
