--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Dompetku</string>
     <string name="menu_laporan">Laporan</string>
     <string name="menu_transaksi">Transaksi</string>
-    <string name="menu_setting">Setting</string>
+    <string name="menu_setting">Settings</string>
     <string name="hari_ini">HARI INI</string>
     <string name="transaksi_data">Transaksi</string>
     <string name="pemasukan_1">Pemasukan</string>
