--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,14 +5,14 @@
     <string name="menu_setting">Settings</string>
     <string name="hari_ini">HARI INI</string>
     <string name="transaksi_data">Transaksi</string>
-    <string name="pemasukan_1">Pemasukan</string>
-    <string name="pengeluaran_1">Pengeluaran</string>
-    <string name="hutang_1">Hutang</string>
-    <string name="in_tanggal">Tanggal</string>
+    <string name="pemasukan">Pemasukan</string>
+    <string name="pengeluaran">Pengeluaran</string>
+    <string name="hutang">Hutang</string>
+    <string name="in_tanggal">xx/xx/xxxx</string>
     <string name="in_kategori">Kategori</string>
     <string name="in_jumlah">Jumlah</string>
     <string name="in_catatan">Catatan</string>
-    <string name="simpan_1">Simpan</string>
+    <string name="simpan">Simpan</string>
     <string name="BG_view">BG</string>
     <string name="logo_dompetku">Logo</string>
 </resources>
